--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -26,9 +26,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.18.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.25.svg" style="width:1161px">
       <div class="content">
-        <h3>2022.03.18.</h3>
+        <h3>2022.03.25.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -5097,6 +5097,55 @@
       <img class="mySlides" src="Pandemic index 2022.03.17.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.17.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.18.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.18.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.19.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.19.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.20.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.20.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.21.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.21.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.22.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.22.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.23.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.23.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.24.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.24.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
