--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -5149,6 +5149,55 @@
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.18.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.25.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.19.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.26.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.20.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.27.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.21.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.28.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.22.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.29.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.23.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.30.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.03.24.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.03.31.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
     <button class="sidebutton" onclick="plusDivs(1)">
       <img id="rightarrow" src="arrow.svg" alt="">
     </button>
