--- a/covid19/activecases/index.html
+++ b/covid19/activecases/index.html
@@ -26,9 +26,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.04.01_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.04.22_16-9_colored.svg" style="width:1161px">
       <div class="content">
-        <h3>2022.04.01.</h3>
+        <h3>2022.04.22.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -4863,54 +4863,195 @@
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.18_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.25_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.25.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.19_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.26_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.26.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.20_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.27_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.27.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.21_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.28_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.28.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.22_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.29_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.29.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.23_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.30_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.30.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Active cases new cases 2022.03.24_16-9_colored.svg" style="width:1161px">
+      <img class="mySlides" src="Active cases new cases 2022.03.31_16-9_colored.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.31.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.01_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.01.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.02_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.02.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.03_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.03.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.04_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.04.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.05_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.05.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.06_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.06.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.07_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.07.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.08_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.08.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.09_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.09.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.10_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.10.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.11_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.11.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.12_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.12.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.13_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.13.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.14_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.14.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.15_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.15.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.16_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.16.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.17_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.18.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.19_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.19.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Active cases new cases 2022.04.20_16-9_colored.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.20.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+  </div>
+  <div id="div4" class="container">
+    <img class="mySlides" src="Active cases new cases 2022.04.21_16-9_colored.svg" style="width:1161px">
+    <div class="content">
+      <h3>2022.04.21.</h3>
+      <!--<p>Folyó naplementekor</p>-->
+    </div>
+  </div>
     <button class="sidebutton" onclick="plusDivs(1)">
       <img id="rightarrow" src="arrow.svg" alt="">
     </button>
@@ -4931,13 +5072,13 @@
         </div>
     </div>-->
   <iframe
-    src="https://ourworldindata.org/explorers/coronavirus-data-explorer?zoomToSelection=true&minPopulationFilter=1000000&time=2022-03-01..latest&facet=none&pickerSort=asc&pickerMetric=location&hideControls=false&Metric=Confirmed+deaths&Interval=7-day+rolling+average&Relative+to+Population=true&Align+outbreaks=false&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE"
+    src="https://ourworldindata.org/explorers/coronavirus-data-explorer?zoomToSelection=true&minPopulationFilter=1000000&time=2022-03-22..latest&facet=none&pickerSort=asc&pickerMetric=location&hideControls=false&Metric=Confirmed+deaths&Interval=7-day+rolling+average&Relative+to+Population=true&Align+outbreaks=false&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE"
     loading="lazy" style="width: 100%; height: 1000px; border: 0px none;"></iframe>
   <iframe
     src="https://ourworldindata.org/coronavirus-data-explorer?zoomToSelection=true&time=earliest..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE&region=World&vaccinationsMetric=true&interval=total&hideControls=true&perCapita=true&smoothing=0&pickerMetric=total_vaccinations_per_hundred&pickerSort=desc"
     loading="lazy" style="width: 100%; height: 1000px; border: 0px none;"></iframe>
   <iframe
-    src="https://ourworldindata.org/grapher/covid-stringency-index?tab=chart&time=2022-02-01..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE"
+    src="https://ourworldindata.org/grapher/covid-stringency-index?tab=chart&time=2022-02-22..latest&country=AUT~BEL~BGR~BLR~BIH~CHE~CYP~CZE~DEU~DNK~EST~FIN~ESP~FRA~GBR~GRC~HRV~HUN~IRL~ISL~ISR~ITA~JPN~KOR~KOS~LVA~MDA~MKD~NLD~NOR~POL~ROU~RUS~SRB~SVK~SVN~SWE~UKR~USA~AZE~GEO~PRT~TUR~ARM~CHN~LTU~LUX~ALB~MLT~MNE"
     loading="lazy" style="width: 100%; height: 1000px; border: 0px none;"></iframe>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="scripts.js"></script>
