--- a/covid19/pandemicindex/index.html
+++ b/covid19/pandemicindex/index.html
@@ -26,9 +26,9 @@
       <img id="leftarrow" src="arrow.svg" alt="">
     </button>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.25.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.04.22.svg" style="width:1161px">
       <div class="content">
-        <h3>2022.03.25.</h3>
+        <h3>2022.04.22.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
@@ -5150,51 +5150,198 @@
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.18.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.25.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.25.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.19.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.26.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.26.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.20.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.27.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.27.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.21.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.28.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.28.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.22.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.29.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.29.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.23.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.30.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.30.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
     <div id="div4" class="container">
-      <img class="mySlides" src="Pandemic index 2022.03.24.svg" style="width:1161px">
+      <img class="mySlides" src="Pandemic index 2022.03.31.svg" style="width:1161px">
       <div class="content">
         <h3>2022.03.31.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.01.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.01.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.02.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.02.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.03.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.03.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.04.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.04.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.05.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.05.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.06.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.06.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.07.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.07.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.08.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.08.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.09.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.09.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.10.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.10.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.11.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.11.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.12.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.12.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.13.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.13.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.14.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.14.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.15.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.15.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.16.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.16.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.17.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.17.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.18.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.18.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.19.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.19.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.20.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.20.</h3>
+        <!--<p>Folyó naplementekor</p>-->
+      </div>
+    </div>
+    <div id="div4" class="container">
+      <img class="mySlides" src="Pandemic index 2022.04.21.svg" style="width:1161px">
+      <div class="content">
+        <h3>2022.04.21.</h3>
         <!--<p>Folyó naplementekor</p>-->
       </div>
     </div>
